@@ -33,6 +33,7 @@ Other features
  * Add `alt` property to `ImageRenditionField` api representation (Liam Mullens)
  * Add `purge_revisions` management command to purge old page revisions (Jacob Topp-Mugglestone, Tom Dyson)
  * Render the Wagtail User Bar on non `Page` views (Caitlin White, Coen van der Kamp)
+ * Add ability to define `form_classname` on `ListBlock` & `StreamBlock` (LB (Ben Johnston))
 
 
 Bug fixes
